PW Gen - fixed wrong color on initialization

--- a/app/tools/password-generator/page.module.css
+++ b/app/tools/password-generator/page.module.css
@@ -37,12 +37,12 @@
   width: 25em;
   height: 1em;
   border-radius: 10px;
-  background-color: hsl(360, 66%, 55%);
+  background-color: #ff0000;
   position: relative;
 }
 
 .strengthText {
-  color: hsl(360, 66%, 55%);
+  color: #ff0000;
   font-size: 40px;
 }
 
